# server/src/common/operation-error.ts
@@ -10,7 +10,9 @@ export type OperationErrorMessage =
   | "UNKNOWN_ERROR"
   | "EMAIL_IN_USE"
   | "NOT_FOUND"
-  | "INVALID_EMAIL_OR_PASSWORD";
+  | "INVALID_EMAIL_OR_PASSWORD"
+  | "INVALID_TOKEN"
+  | "NOT_AUTHORIZED";
 
 export class OperationError extends Error {
   constructor(message: OperationErrorMessage, readonly status: HttpStatusCode) {
