# server/src/routes/swagger.json
@@ -187,7 +187,13 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"token": [
+							"admin"
+						]
+					}
+				],
 				"parameters": []
 			}
 		}
